# xcb-opengl-simple-program

./: CMakeLists.txt  README.md  main.c  opengl3.c  opengl3.h
glad/include/glad/: gl.h  glx.h
glad/src/: glx.c
